confirmation module was missing
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@414 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -511,6 +511,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="adm\images\drag.png" />
+    <Content Include="adm\js\bootstrap-confirmation.js" />
     <Content Include="adm\js\bootstrap-treeview.js" />
     <Content Include="adm\js\bootstrap.js" />
     <Content Include="adm\codemirror\codemirror.js" />
