--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -164,7 +164,7 @@
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
     </staticContent>
-   <httpErrors>
+   <httpErrors  errorMode="Detailed">
         <remove statusCode="404" subStatusCode="-1" />
         <error statusCode="404" prefixLanguageFilePath="" path="site_specific\404.html" responseMode="File" />
     </httpErrors>
