forms needed trace js function to work. some unknown work in main one.net, too
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@440 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -22,7 +22,7 @@
   <location path="Users.aspx">
     <system.web>
       <authorization>
-        <allow roles="admin" />
+        <allow roles="admin, Users" />
         <deny users="*" />
       </authorization>
     </system.web>
