--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="51Degrees.mobi" version="3.1.8.4" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="bootstrap" version="3.0.3" targetFramework="net45" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.7.14" targetFramework="net45" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.7.14.1" targetFramework="net45" />
   <package id="BundleTransformer.Core" version="1.9.32" targetFramework="net45" />
   <package id="BundleTransformer.SassAndScss" version="1.9.25" targetFramework="net45" />
   <package id="BundleTransformer.Yui" version="1.9.30" targetFramework="net45" />
@@ -11,6 +14,7 @@
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="Less.js" version="1.5.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
@@ -25,11 +29,13 @@
   <package id="Microsoft.Owin.Security.Google" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net45" />
 </packages>
