this commit shouldn't break any existing stuff, but no warranties
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@459 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -178,6 +178,9 @@
   </system.net>
   <system.serviceModel>
     <services>
+      <service name="One.Net.BLL.Service.ScaffoldService" behaviorConfiguration="myBehavior">
+        <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IScaffoldService" />
+      </service>
       <service name="One.Net.BLL.Service.FormService" behaviorConfiguration="myBehavior">
         <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IFormService" />
       </service>
