--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -83,6 +83,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FiftyOne.Foundation, Version=3.1.11.1, Culture=neutral, PublicKeyToken=e967ae578dabd98e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\51Degrees.mobi.3.1.11.1\lib\NET40\FiftyOne.Foundation.dll</HintPath>
+    </Reference>
     <Reference Include="IronRuby, Version=1.1.4.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\BundleTransformer.SassAndScss.1.9.49\lib\net40\IronRuby.dll</HintPath>
@@ -640,13 +644,6 @@
     <Compile Include="adm\Articles.aspx.designer.cs">
       <DependentUpon>Articles.aspx</DependentUpon>
     </Compile>
-    <Compile Include="adm\ContentEdit.aspx.cs">
-      <DependentUpon>ContentEdit.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="adm\ContentEdit.aspx.designer.cs">
-      <DependentUpon>ContentEdit.aspx</DependentUpon>
-    </Compile>
     <Compile Include="adm\External.aspx.cs">
       <DependentUpon>External.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -952,6 +949,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="51Degrees.config" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -1003,7 +1001,6 @@
     <Content Include="Utils\Favicon.ashx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="adm\ContentEdit.aspx" />
     <Content Include="adm\Structure.aspx" />
     <Content Include="CommonModules\NewsSubscription.ascx" />
     <Content Include="CommonModules\TextContent.ascx" />
