json serialization issue solved; basic saving over ajax now works missing: - fk save - add button functionality - onetomany display - single entry in virtual_rel table
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@465 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -531,6 +531,7 @@
     <Content Include="adm\images\drag.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="adm\js\bootbox.js" />
     <Content Include="adm\js\bootstrap-confirmation.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
