removed fiftyone foundation mobile device detect (because it eats RAM)
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@472 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -4,13 +4,6 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="rssConfiguration" type="One.Net.BLL.WebConfig.RssConfiguration" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <sectionGroup name="fiftyOne">
-      <section name="log" type="FiftyOne.Foundation.Mobile.Configuration.LogSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
-      <section name="redirect" type="FiftyOne.Foundation.Mobile.Configuration.RedirectSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
-      <section name="detection" type="FiftyOne.Foundation.Mobile.Detection.Configuration.DetectionSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
-      <section name="imageOptimisation" type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
-    </sectionGroup>
 	  <sectionGroup name="bundleTransformer"> 
 	   
      
@@ -36,12 +29,6 @@
   </nlog>
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
-  <fiftyOne>
-    <redirect firstRequestOnly="true" mobileHomePageUrl="" timeout="20" devicesFile="~/App_Data/Devices.dat" />
-    <log logFile="~/App_Data/Log.txt" logLevel="Info" />
-    <detection binaryFilePath="~/App_Data/51Degrees.dat" />
-    <imageOptimisation enabled="false" maxWidth="1000" maxHeight="1000" factor="1" widthParam="w" heightParam="h" />
-  </fiftyOne>
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
@@ -83,23 +70,20 @@
           <match url="^(?!_files)(_.*)+" />
           <action type="Rewrite" url="site_specific/{R:1}" />
         </rule>
-		 <rule name="Remove trailing slash">
-			<match url="(.*)/$" />
-			<conditions>
-			<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-			<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-			</conditions>
-			<action type="Redirect" redirectType="Permanent" url="{R:1}" />
-		</rule>
+		     <rule name="Remove trailing slash">
+			    <match url="(.*)/$" />
+			    <conditions>
+			    <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+			    <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+			    </conditions>
+			    <action type="Redirect" redirectType="Permanent" url="{R:1}" />
+		    </rule>
       </rules>
     </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
-      <!-- IIS 7.X - Registers 51Degrees Detector Module. Without this call to 51Degrees.core.js won't work.--><remove name="FormsAuthenticationModule" />
-      
-      
-      
-    <remove name="Detector" /><add name="Detector" type="FiftyOne.Foundation.Mobile.Detection.DetectorModule, FiftyOne.Foundation" /></modules>
+      <remove name="FormsAuthenticationModule" />
+    </modules>
     <handlers>
       <add path="/callbacks/google" name="Owin" verb="*" type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb" />
       <add path="*.gif" name="gif2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
@@ -131,12 +115,9 @@
       
       
       <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="One.Net.BLL.Paths.DownloadHandler" />
-      
-      
-      
-      
-      
-    <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /><add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /></handlers>
+      <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
+      <add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
+    </handlers>
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
 
