added template for authorized access to all preview
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@480 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -48,6 +48,11 @@
     </customErrors>
     <compilation debug="true" />
     <authentication mode="None" />
+    <!-- for authorized access to all preview
+    <authorization>
+      <deny users="?" />
+    </authorization>
+    -->
     <siteMap enabled="true" defaultProvider="OneSiteMapProvider">
       <providers>
         <clear />
