1.) removed error on login screen 2.) tried to add resilient SQL connection for azure, but failed. 3.) support for login locked preview site
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@482 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -216,6 +216,20 @@
       </authorization>
     </system.web>
   </location>
+  <location path="Scripts">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="WebResource.axd">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
