enabled redirect module in web.config
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@484 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -87,6 +87,7 @@
     </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
+      <add name="RedirectModule" type="One.Net.BLL.RedirectModule, One.Net.BLL" />
       <remove name="FormsAuthenticationModule" />
     </modules>
     <handlers>
