disabled logging by default added loging to login
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@485 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -15,6 +15,7 @@
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
     </providers>
   </rssConfiguration>
+  <!--
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <target name="asyncFile" xsi:type="AsyncWrapper">
@@ -26,7 +27,7 @@
       <logger name="*" minlevel="Info" writeTo="asyncFile" />
     </rules>
 
-  </nlog>
+  </nlog> -->
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
   <system.web>
