login screen now looks nice with debug=false added some debug fields to auth.
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@487 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -218,6 +218,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="Bundles">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
   <location path="Scripts">
     <system.web>
       <authorization>
