--- a/OneMainWeb/adm/css/web.config
+++ b/OneMainWeb/adm/css/web.config
@@ -2,7 +2,7 @@
 <configuration>
   <system.web>
     <authorization>
-      <allow users="*" />
+      <allow users="?" />
     </authorization>
   </system.web>
 </configuration>
